--- a/app.json
+++ b/app.json
@@ -39,6 +39,10 @@
       "description": "Masukan ID Channel Untuk [Channel Database]",
       "value": "-100"
     },
+    "PROTECT_CONTENT": {
+      "description": "Untuk Mencegah pengguna bot untuk mendownload/memforward/mengscreenshot konten yang dikirim di bot [ Bila ingin diaktifkan ubah ke True ]",
+      "value": "True"
+    },
     "FORCE_SUB_CHANNEL1": {
       "description": "Masukan ID dari Channel Atau Group Untuk Wajib Subscribenya",
       "value": "-100"
