--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ feedparser
 gitpython
 heroku3
 psycopg2-binary
-pyrogram==1.4.16
+pyrogram
 python-dotenv
-Pyromod==1.0.0
+Pyromod
 speedtest-cli
 sqlalchemy==1.3.23
 TgCrypto
